# MTAI2025-Deep-learning-frameworks-seminars

sem10_tensorrt_hw/: TensorRT.ipynb
sem11_distillation_hw/: Knowledge_Distillation.ipynb
sem12_awq_hw/: LLM_quant.ipynb  pyproject.toml
sem4_AE_VAE_CVAE_hw/: VAE.ipynb
